add new spec vars
